# rust-operator

./: Cargo.toml  Dockerfile  deploy.yml
src/: main.rs
